<resources>
    <string name="app_name" translatable="false">Qonvert</string>
    <string name="bPos" translatable="false">+</string>
    <string name="bNeg" translatable="false">—</string>
    <string name="bPosNeg" translatable="false">±</string>
    <string name="b1" translatable="false">phi</string>
    <string name="b2" translatable="false">bin</string>
    <string name="b3" translatable="false">ter</string>
    <string name="b6" translatable="false">sen</string>
    <string name="b8" translatable="false">oct</string>
    <string name="b10" translatable="false">dec</string>
    <string name="b12" translatable="false">doz</string>
    <string name="b16" translatable="false">hex</string>
    <string name="b20" translatable="false">vig</string>
    <string name="b26" translatable="false">hxv</string>
    <string name="b60" translatable="false">sex</string>
    <string name="complement">complement</string>
    <string name="dms">DMS</string>
    <string name="edit_hint">Type a number ∈ ℚ</string>
    <string name="clear_hint">Clear input</string>
    <string name="base">%1$s: base %2$s, %3$s</string>
    <string name="just_base">base %s</string>
    <string name="base_message">For base φ (the golden ratio), type ‘1’.</string>
    <string name="clipboard_asIs">Copy to clipboard as is</string>
    <string name="clipboard_dissect">… with dissected digits</string>
    <string name="clipboard_rep">… with overlined repeating part</string>
    <string name="clipboard_fraction">… as pretty fraction</string>
    <string name="clipboard_withUnicodeName">… with Unicode name</string>
    <string name="clipboard_noQuotes">… without quotes</string>
    <string name="clipboard_compat">… as compatible as possible</string>
    <string name="clipboard_ok">Copied to clipboard</string>
    <string name="to_fraction">Converted to fraction to preserve precision</string>
    <string name="to_tokenFree">Removed base tokens from input string</string>
    <string name="range_toast">%1$s: digit range %2$s…%3$s</string>
    <string name="range_toast_greek">%1$s: Greek numerals or digit range %2$s…%3$s</string>
    <string name="range_toast_onlyGreek">%1$s: Greek numerals</string>
    <string name="range_toast_roman">%1$s: Roman numerals or digit range %2$s…%3$s</string>
    <string name="range_toast_onlyRoman">%1$s: Roman numerals</string>
    <string name="no_q_number">There is no valid number in the input line.</string>
    <string name="no_history">The history is empty. Type a number, then tap Enter or delete it with the 🗑 button, to store it there.</string>
    <string name="no_history_short">The history is empty.</string>
    <string name="dont_show_again">Don’t show this message again.</string>
    <string name="err_quote">is only valid at start or end of input.</string>
    <string name="err_bracket">is only valid around continued fraction.</string>
    <string name="err_brace">is only valid around Egyptian fraction.</string>
    <string name="err_semicolon">in continued or Egyptian fraction is only valid once and before any commas.</string>
    <string name="err_comma">in continued or Egyptian fraction is only valid after \";\".</string>
    <string name="err_underscore">in mixed fraction is only valid once and before \"/\".</string>
    <string name="err_slash">in fraction is only valid once.</string>
    <string name="err_twoPoints">– the radix point – is only valid once.</string>
    <string name="err_twoReps">– the repetition mark – is only valid once.</string>
    <string name="err_twoDegs">– the degrees symbol – is only valid once.</string>
    <string name="err_twoMins">– the minutes symbol – is only valid once and after any degrees symbol.</string>
    <string name="err_baseTokenOrMinus">is only valid at start of number.</string>
    <string name="err_ellipsis">denotes a number that’s been cut off.</string>
    <string name="err_infinity">[Those having problems with infinities] aren’t nearly appreciative enough of projective geometry. (Grant Sanderson)</string>
    <string name="err_undefined">Does your input have Buddha-nature?</string>
    <string name="err_keraia">– the keraia – is only valid at the end of a Greek numeral.</string>
    <string name="err_noBalancedDigit">has no defined value in balanced systems.</string>
    <string name="err_fraction">is only valid at end of number.</string>
    <string name="err_onlyGreek">is only valid in Greek numerals.</string>
    <string name="err_onlyRoman">is only valid in Roman numerals.</string>
    <string name="err_noGreek">is neither a valid Greek nor an Arabic numeral.</string>
    <string name="err_noRoman">is neither a valid Roman nor an Arabic numeral.</string>
    <string name="err_irrational">isn’t rational.\nTap ⛶ to show it in all formats.</string>
    <string name="err_notInHistory">denotes a history entry that doesn’t exist.</string>
    <string name="err_generic">isn’t a valid character.</string>
    <string name="err_unknown">caused an unknown error.</string>
    <string name="err_load">error loading number</string>
    <string name="menu_formats">All formats</string>
    <string name="phi_formats_title">All formats of \"%s\"</string>
    <string name="menu_history">History</string>
    <string name="menu_interval">Play interval</string>
    <string name="menu_interval_list">Musical intervals</string>
    <string name="menu_undefined">What is this?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_cheatSheet">Cheat sheet</string>
    <string name="menu_whatsNew">What’s new</string>
    <string name="menu_about">About &amp; Licenses</string>
    <string name="interval">Interval</string>
    <string name="interval_keep">tap wave to keep open</string>
    <string name="interval_swipe">swipe wave to shift phase</string>
    <string name="interval_noWave">Wave frequency is too high for this screen’s resolution.</string>
    <string name="octaves">%d octaves</string>
    <string name="between_intervals">between %1$s and %2$s</string>
    <string name="interval_grammar_nom" />
    <string name="interval_grammar_between" />
    <string name="no_interval">Number must be in the range\n%1$s…%2$s</string>
    <string name="menu_dots" translatable="false">⋮</string>
    <string name="formats_hint">Show all formats</string>
    <string name="expand_hint">Expand / collapse</string>
    <string name="item_header" translatable="false">%s =</string>
    <string name="egyptian_method">Egyptian fraction: %s</string>
    <string name="egyptian_phinary">Phinary remainder method</string>
    <string name="select_all">Select all</string>
    <string name="clear_selection">Clear selection</string>
    <string name="copy_my">Copy</string>
    <string name="clipboard_all_ok">Copied all %d entries to clipboard</string>
    <string name="share">Share</string>
    <string name="share_all">Share all %d entries with</string>
    <string name="delete">Delete</string>
    <plurals name="deleted">
        <item quantity="one">Deleted entry</item>
        <item quantity="other">Deleted %d entries</item>
    </plurals>
    <string name="clear_history">Clear history</string>
    <string name="deleted_all">Deleted all %d entries</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="default_output">default</string>
    <string name="dissect_output">dissect</string>
    <string name="pretty_output">pretty</string>
    <string name="compatible_output">compatible</string>
    <string name="count_denominators">Count denominators</string>
    <string name="count_digits">Count digits</string>
    <string name="count_denominators_title">Denominator count</string>
    <string name="count_digits_title">Digit count</string>
    <string name="counting">🕰 Counting…</string>
    <plurals name="denominators">
        <item quantity="one">%s denominator</item>
        <item quantity="other">%s denominators</item>
    </plurals>
    <plurals name="denom_digit_list">
        <item quantity="one">%s in denominator</item>
        <item quantity="other">%s in denominators</item>
    </plurals>
    <plurals name="digits">
        <item quantity="one">%s digit</item>
        <item quantity="other">%s digits</item>
    </plurals>
    <string name="complement_digits">any number of digits</string>
    <string name="digits_deg">degrees:</string>
    <string name="digits_min">minutes:</string>
    <string name="digits_sec">seconds:</string>
    <string name="digits_all">%s</string>
    <string name="digits_int">%s in integer part</string>
    <string name="digits_int_phi">%s in phinteger part</string>
    <string name="digits_frac">%s in fractional part</string>
    <string name="digits_frac_phi">%s in phractional part</string>
    <string name="digits_pre">%s in non-repeating fractional part</string>
    <string name="digits_pre_phi">%s in non-repeating phractional part</string>
    <string name="digits_rep">%s in repeating part</string>
    <string name="digits_numer">%s in numerator</string>
    <string name="digits_denom">%s in denominator</string>
    <string name="out_header">Output</string>
    <string name="digits_title">Maximum digits in fractional part</string>
    <string name="group_title">Group digits</string>
    <string name="group_hint">by 4 in bases φ, ±2, 4, 8, 16, etc., else by 3</string>
    <string name="lowercase_title">Lower case digits</string>
    <string name="natural_title">Show natural numbers as</string>
    <string name="apostrophus_title">Roman apostrophus</string>
    <string name="egyptian_title">Egyptian fractions</string>
    <string name="feedback_header">Feedback</string>
    <string name="range_title">Show digit range on base change</string>
    <string name="autoScroll_title">Auto-scroll down output area</string>
    <string name="autoScroll_hint">on input change</string>
    <string name="wrongDigits_title">Warn on non-standard input</string>
    <string name="wrongDigits_hint">Turns weird but still interpretable input orange (e.g.&#xA0;digit out of range)</string>
    <string name="keyboard_header">Keyboard</string>
    <string name="keyboard_title">Keyboard layout</string>
    <string name="spaceComposes_title">Space key composes digit</string>
    <string name="spaceComposes_hint">from its decimal representation</string>
    <string name="tokens_title">Customize base tokens</string>
    <string name="tokens_reset">Reset all tokens</string>
    <string name="tokens_reset_ok">Tokens reset</string>
    <string name="tokens_dollar">$ (and also €, £, ¥)</string>
    <string name="base_title">Base</string>
    <string name="base_dialogTitle">Base (±2…%d)</string>
    <string name="numSystem_title">Numeral system</string>
    <string name="appearance_header">Appearance</string>
    <string name="buttons_title">Show base buttons</string>
    <string name="moreSpace_title">More space above base buttons</string>
    <string name="size_title">Text size</string>
    <string name="font_title">Font type</string>
    <string name="theme_title">Theme</string>
    <string name="share_app">Convert rational numbers between different bases and different representations:
        \n\nhttps://play.google.com/store/apps/details?id=org.tessoft.qonvert\n\nor\n\nhttps://f-droid.org/packages/org.tessoft.qonvert/</string>
    <string name="title_about">About Qonvert v%1$s &lt;small&gt;(♯%2$d)&lt;/small&gt;</string>
</resources>