<!--
Copyright 2020, 2021, 2022, 2023 Anypodetos (Michael Weber)

This file is part of Qonvert.

Qonvert is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Qonvert is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Qonvert. If not, see <https://www.gnu.org/licenses/>.

Contact: <https://lemizh.conlang.org/home/contact.php?about=qonvert>
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:iconSpaceReserved="false">

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/out_header">

        <ListPreference
                app:entries="@array/digits_entries"
                app:entryValues="@array/digits_values"
                app:iconSpaceReserved="false"
                app:key="digits"
                app:title="@string/digits_title"
                app:useSimpleSummaryProvider="true"
                app:defaultValue="300" />
        <SwitchPreference
                android:defaultValue="false"
                android:key="group"
                android:summary="@string/group_hint"
                android:title="@string/group_title"
                app:iconSpaceReserved="false" />
        <SwitchPreference
                android:defaultValue="false"
                android:key="lowercase"
                android:title="@string/lowercase_title"
                app:iconSpaceReserved="false" />
        <ListPreference
                android:defaultValue="0"
                android:title="@string/apostrophus_title"
                android:entries="@array/apostrophus_entries"
                android:entryValues="@array/apostrophus_values"
                android:key="apostrophus"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="false" />
        <MultiSelectListPreference
                android:title="@string/natural_title"
                android:defaultValue="@array/natural_values"
                android:entries="@array/natural_entries"
                android:entryValues="@array/natural_values"
                android:key="natural"
                app:iconSpaceReserved="false" />
        <ListPreference
                android:defaultValue="BINARY"
                android:title="@string/egyptian_title"
                android:entries="@array/egyptian_entries"
                android:entryValues="@array/egyptian_values"
                android:key="egyptian"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/feedback_header">

        <SwitchPreference
                android:defaultValue="true"
                android:key="range"
                android:title="@string/range_title"
                app:iconSpaceReserved="false" />
        <SwitchPreference
                android:title="@string/autoScroll_title"
                android:key="scrollOutput"
                android:defaultValue="true"
                app:iconSpaceReserved="false"
                android:summary="@string/autoScroll_hint" />
        <SwitchPreference
                android:defaultValue="true"
                android:key="wrongDigits"
                android:summary="@string/wrongDigits_hint"
                android:title="@string/wrongDigits_title"
                app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/tokens_header"
            app:iconSpaceReserved="false">

        <Preference
                android:title="@string/tokens_title"
                android:key="baseTokens"
                app:fragment="org.tessoft.qonvert.TokenSettingsFragment"
                app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/appearance_header">

        <MultiSelectListPreference
                app:defaultValue="@array/buttons_def_values"
                app:entries="@array/buttons_entries"
                app:entryValues="@array/buttons_values"
                app:iconSpaceReserved="false"
                app:key="buttons"
                app:title="@string/buttons_title" />
        <ListPreference
                app:defaultValue="DIGITS_RIGHT"
                app:entries="@array/keyboard_entries"
                app:entryValues="@array/keyboard_values"
                app:iconSpaceReserved="false"
                app:key="keyboard"
                app:title="@string/keyboard_title"
                app:useSimpleSummaryProvider="true" />
        <SwitchPreference
                android:defaultValue="false"
                android:title="@string/moreSpace_title"
                android:key="moreSpace"
                app:iconSpaceReserved="false" />
        <ListPreference
                app:defaultValue="20"
                app:entries="@array/size_entries"
                app:entryValues="@array/size_values"
                app:iconSpaceReserved="false"
                app:key="size"
                app:title="@string/size_title"
                app:useSimpleSummaryProvider="true" />
        <ListPreference
                app:defaultValue="SA"
                app:entries="@array/theme_entries"
                app:entryValues="@array/theme_values"
                app:iconSpaceReserved="false"
                app:key="theme"
                app:title="@string/theme_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>