<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2020, 2022 Anypodetos (Michael Weber)

This file is part of Qonvert.

Qonvert is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Qonvert is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Qonvert. If not, see <https://www.gnu.org/licenses/>.

Contact: <https://lemizh.conlang.org/home/contact.php?about=qonvert>
-->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_formats"
        app:showAsAction="always"
        android:icon="@drawable/ic_fullscreen"
        android:id="@+id/allFormatsItem" />
    <item
        android:id="@+id/historyItem"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history"
        app:showAsAction="always" />
    <group android:id="@+id/group1">
        <item
            android:id="@+id/settingsItem"
            android:title="@string/menu_settings" />
        <item
            android:title="@string/menu_interval_list"
            android:id="@+id/intervalListItem" />
    </group>
    <item
        android:id="@+id/intervalItem"
        android:icon="@drawable/ic_interval"
        android:title="@string/menu_interval"
        app:showAsAction="always" />
    <group android:id="@+id/group2">
        <item
            android:id="@+id/helpItem"
            android:title="@string/menu_help" />
        <item
            android:title="@string/menu_cheatSheet"
            android:id="@+id/cheatSheetItem" />
        <item
            android:title="@string/menu_whatsNew"
            android:id="@+id/whatsNewItem"
            android:icon="@android:drawable/star_big_on" />
        <item
            android:id="@+id/aboutItem"
            android:title="@string/menu_about" />
    </group>
</menu>