<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2021, 2022, 2023 Anypodetos (Michael Weber)

This file is part of Qonvert.

Qonvert is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Qonvert is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Qonvert. If not, see <https://www.gnu.org/licenses/>.

Contact: <https://lemizh.conlang.org/home/contact.php?about=qonvert>
-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/listToolbar"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            app:titleTextColor="@color/white" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/listToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/baseSelector">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listBaseButton"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:textAllCaps="false"
                app:backgroundTint="?attr/colorPrimaryVariant" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listSystemButton"
                android:layout_weight="1"
                app:icon="@drawable/ic_dropdown"
                app:iconSize="10dp"
                app:iconGravity="end"
                app:iconPadding="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp" />

        <androidx.appcompat.widget.SwitchCompat
                android:text="@string/complement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listComplementSwitch"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.SwitchCompat
                android:text="@string/dms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listDmsSwitch"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <View
            android:id="@+id/baseDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/baseSelector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?android:attr/listDivider"
            android:layout_weight="1" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/baseSelector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recycler"
            app:layout_constraintBottom_toBottomOf="@+id/divider5"
            android:scrollbars="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/outputRadioGroup" />

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler"
            android:id="@+id/outputRadioGroup"
            android:orientation="horizontal"
            android:checkedButton="@id/defaultRadio">

        <RadioButton
                android:text="@string/default_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/defaultRadio" />

        <RadioButton
                android:text="@string/dissect_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dissectRadio" />

        <RadioButton
                android:text="@string/pretty_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prettyRadio" />

        <RadioButton
                android:text="@string/compatible_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/compatibleRadio" />
    </RadioGroup>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coordinator"
            tools:context=".ListActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outputRadioGroup"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
